<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_translation"
            android:icon="@drawable/translate"
            android:title="@string/translation" />

        <item
            android:id="@+id/nav_landmarks"
            android:icon="@drawable/attractions"
            android:title="@string/landmarks_recognition" />

        <item
            android:id="@+id/nav_currency"
            android:icon="@drawable/currency_exchange"
            android:title="@string/currency_converter" />
    </group>


    <item android:title="@string/profile">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/profile"
                    android:title="@string/profile" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout"
                    android:title="@string/logout" />
            </group>
        </menu>

    </item>

</menu>