<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectImage">

    <!-- add Camera Button to open the Camera-->

    <!-- add ImageView to display the captured image-->

    <Button
        android:id="@+id/camera_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/round_bg"
        android:text="@string/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gallery_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/round_bg"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toEndOf="@+id/camera_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/results_button"
        android:layout_width="198dp"
        android:layout_height="55dp"
        android:background="@drawable/round_bg"
        android:onClick="runTextRecognition"
        android:text="@string/results"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/click_image" />

    <ImageView
        android:id="@+id/click_image"
        android:layout_width="286dp"
        android:layout_height="403dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_button"
        app:layout_constraintVertical_bias="0.136" />
</androidx.constraintlayout.widget.ConstraintLayout>