<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECF0FD"
    tools:context=".UserProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#1762C6"
            android:padding="20dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/user_icon_5" />

            <TextView
                android:id="@+id/username_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/profile_image"
                android:fontFamily="@font/amiko_bold"
                android:includeFontPadding="false"
                android:text=""
                android:textColor="@color/white"
                android:textSize="30sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-60dp"
            android:padding="20dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/blue_500"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:padding="0dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/translation" />

                    <TextView
                        android:id="@+id/translation_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/amiko_bold"
                        android:includeFontPadding="true"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/translation_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/translation_label"
                        android:layout_centerHorizontal="true"
                        android:includeFontPadding="false"
                        android:text="@string/translations"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/blue_500"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:padding="0dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/landmarks" />

                    <TextView
                        android:id="@+id/landmark_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/amiko_bold"
                        android:includeFontPadding="true"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/landmark_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/landmark_label"
                        android:layout_centerHorizontal="true"
                        android:includeFontPadding="false"
                        android:text="@string/landmarks"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/blue_500"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:padding="0dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/currency" />

                    <TextView
                        android:id="@+id/conversion_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/amiko_bold"
                        android:includeFontPadding="true"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/conversion_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/conversion_label"
                        android:layout_centerHorizontal="true"
                        android:includeFontPadding="false"
                        android:text="@string/conversions"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="-25dp"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/full_name_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                app:boxBackgroundColor="#ECF0FD">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/profile"
                    android:drawablePadding="10dp"
                    android:text=""
                    android:textSize="16sp"
                    android:clickable="false"
                    android:editable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                app:boxBackgroundColor="#ECF0FD">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:text=""
                    android:textSize="16sp"
                    android:clickable="false"
                    android:editable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/country_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country"
                app:boxBackgroundColor="#ECF0FD">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_language"
                    android:drawablePadding="10dp"
                    android:text=""
                    android:textSize="16sp"
                    android:clickable="false"
                    android:editable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/age_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                app:boxBackgroundColor="#ECF0FD">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_cake"
                    android:drawablePadding="10dp"
                    android:text=""
                    android:textSize="16sp"
                    android:clickable="false"
                    android:editable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#fece2f"
                android:fontFamily="@font/amiko_bold"
                android:onClick="logout"
                android:text="@string/logout" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>